Added work experience locations + fixed box sizing.

--- a/new/home.html
+++ b/new/home.html
@@ -266,6 +266,7 @@
                     <div class="work-logo"><img src="img/work/tagged.png"></div>
                     <div class="work-company">Tagged</div>
                     <div class="work-position">Software Engineer</div>
+                    <div class="work-location">San Francisco, California</div>
                     <div class="work-description">
                         <ul>
                             <li>Shipped production level code to over 2.5 million daily active users.</li>
@@ -279,6 +280,7 @@
                     <div class="work-logo"><img src="img/work/ibm.png"></div>
                     <div class="work-company">IBM</div>
                     <div class="work-position">Software Developer</div>
+                    <div class="work-location">Ottawa, Ontario</div>
                     <div class="work-description">
                         <ul>
                             <li>Shipped a Java tool that determines more system info than Microsoft’s sysinfo command and produces a CSV file of its findings. This tool is being used internally and saves approximately $1,000 annually per employee.</li>
@@ -292,6 +294,7 @@
                     <div class="work-logo"><img src="img/work/wire.png"></div>
                     <div class="work-company">WIRE</div>
                     <div class="work-position">Researcher</div>
+                    <div class="work-location">Waterloo, Ontario</div>
                     <div class="work-description">
                         <ul>
                             <li>Researched the history and future of high-speed cameras as well as potential environmental impact.</li>
@@ -302,6 +305,7 @@
                     <div class="work-logo"><img src="img/work/onprint.png"></div>
                     <div class="work-company">Onprint</div>
                     <div class="work-position">Graphic Designer</div>
+                    <div class="work-location">Waterloo, Ontario</div>
                     <div class="work-description">
                         <ul>
                             <li>Over 100 hours of graphic design using Adobe Photoshop and Illustrator.</li>
