Implemented php backend for mail form + updated jquery validation.

--- a/new/home.html
+++ b/new/home.html
@@ -415,7 +415,7 @@
                         <div id="personal" class="bay form-horizontal">
                             <div class="control-group"><!--name field-->
                                 <div class="controls">
-                                    <input class="required span9" type="text" name="author" data-fieldid="0" value="Full Name" onclick="if(this.value=='Full Name') this.value=''" onblur="if(this.value=='') this.value='Full Name'">
+                                    <input class="required span9" type="text" name="name" data-fieldid="0" value="Full Name" onclick="if(this.value=='Full Name') this.value=''" onblur="if(this.value=='') this.value='Full Name'">
                                 </div>
                             </div>
                             <div class="control-group"><!--email field-->
@@ -467,7 +467,7 @@
         <script src="js/home/jquery.nav.js"></script>
         <script src="js/home/jquery.isotope.min.js"></script>
         <script src="js/home/jquery.mb.YTPlayer.js"></script>
-        <script src="js/home/jquery.validate.js"></script>
+        <script src="js/home/jquery.validate.min.js"></script>
         <script src="js/home/jquery.form.min.js"></script>
     </body>
 </html>
