Update work experience titles + make them bold.

--- a/new/home.html
+++ b/new/home.html
@@ -264,7 +264,7 @@
             <div id="work" class="work-container">
                 <div class="work-exp-left-1 hideme">
                     <div class="work-logo"><img src="img/work/tagged.png"></div>
-                    <div class="work-company">Tagged</div>
+                    <div class="work-company"><b>Tagged Inc.</b></div>
                     <div class="work-position">Software Engineer</div>
                     <div class="work-location">San Francisco, California</div>
                     <div class="work-description">
@@ -278,7 +278,7 @@
                 </div>
                 <div class="work-exp-right-1 hideme">
                     <div class="work-logo"><img src="img/work/ibm.png"></div>
-                    <div class="work-company">IBM</div>
+                    <div class="work-company"><b>IBM Canada</b></div>
                     <div class="work-position">Software Developer</div>
                     <div class="work-location">Ottawa, Ontario</div>
                     <div class="work-description">
@@ -292,7 +292,7 @@
                 </div>
                 <div class="work-exp-left-2 hideme">
                     <div class="work-logo"><img src="img/work/wire.png"></div>
-                    <div class="work-company">WIRE</div>
+                    <div class="work-company"><b>WIRE Inc.</b></div>
                     <div class="work-position">Researcher</div>
                     <div class="work-location">Waterloo, Ontario</div>
                     <div class="work-description">
@@ -303,7 +303,7 @@
                 </div>
                 <div class="work-exp-right-2 hideme">
                     <div class="work-logo"><img src="img/work/onprint.png"></div>
-                    <div class="work-company">Onprint</div>
+                    <div class="work-company"><b>Onprint Inc.</b></div>
                     <div class="work-position">Graphic Designer</div>
                     <div class="work-location">Waterloo, Ontario</div>
                     <div class="work-description">
