Refactoring css selectors - part 1.

--- a/new/home.html
+++ b/new/home.html
@@ -53,7 +53,7 @@
         </div>
         <section id="home" class="clear">
             <div>
-                <div class="mk-video-mask"></div>
+                <div class="video-mask"></div>
                 <a id="video-volume" onclick="$('#background-video').toggleVolume()"></a>
                 <!-- <div class="bounce"></div> -->
                 
@@ -61,21 +61,22 @@
                 <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;"></a>
             </div>
         </section>
-        <section id="homedevice" class="clear"></section>
+        <section id="mobile-background" class="clear"></section>
         <div class="main-title">
             <div class="title-container">
                 <div class="welcome">A young man with big dreams.</div>
                 <ul>
-                    <li class="t-current">Baraa Hamodi</li>
+                    <li class="current-title">Baraa Hamodi</li>
                 </ul>
                 <div class="spacer"></div>
                 <div class="second-title">Creativity starts with viewing the world differently. Take action & keep it simple.</div>
-                <a href="#anchor2"><div class="buy-logo">Find out more<span></span></div></a>
+                <a href="#anchor2"><div class="continue-button
+">Find out more<span></span></div></a>
             </div>
         </div>
         <header class="header">
             <div class="logo"><span><span></span></span>Baraa Hamodi</div>
-            <nav id="nav2" role="navigation">
+            <nav id="navbar" role="navigation">
                 <a class="jump-menu" title="Show navigation">Show navigation</a>
                 <ul>
                     <li class="current"><a href="#home">home</a></li>
@@ -91,7 +92,6 @@
                     <li class="current"><a href="#home">home</a></li>
                     <li><a href="#anchor2">about</a></li>
                     <li><a href="#anchor3">facts</a></li>
-                    <!--<li><a href="#">blog</a></li>-->
                     <li><a href="#anchor4">experience</a></li>
                     <li><a href="#anchor5">projects</a></li>
                     <li><a href="#anchor6">contact</a></li>
