Refactoring css selectors - part 2.

--- a/new/home.html
+++ b/new/home.html
@@ -104,107 +104,107 @@
             <div class="title two">I take pride in my interdisciplinary approach in crafting beautiful, functional and engaging work that delights and delivers results.</div>
             <div class="s-container services-container">
                 <section class="services">
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">C++</div></div>
-                        <div class="tooltip s-roll">
+                    <div class="skill-element hideme dontHide">
+                        <div class="skill-icon"><div class="skill-title">C++</div></div>
+                        <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Embedded Software</li>
-                                    <li><span class="list-dot"></span>Tool Developement</li>
-                                    <li><span class="list-dot"></span>Algorithms and Data Structures</li>
+                                    <li><span class="skill-experience"></span>Embedded Software</li>
+                                    <li><span class="skill-experience"></span>Tool Developement</li>
+                                    <li><span class="skill-experience"></span>Algorithms and Data Structures</li>
                                 </ul>
                             </div>
                         </div>
-                        <span class="arrow-down s-roll"></span>
+                        <span class="arrow-down skill-hover"></span>
                     </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">Java</div></div>
-                        <div class="tooltip s-roll">
+                    <div class="skill-element hideme dontHide">
+                        <div class="skill-icon"><div class="skill-title">Java</div></div>
+                        <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Android Developement</li>
-                                    <li><span class="list-dot"></span>Tool Developement</li>
-                                    <li><span class="list-dot"></span>Cross-platform Game Developement</li>
+                                    <li><span class="skill-experience"></span>Android Developement</li>
+                                    <li><span class="skill-experience"></span>Tool Developement</li>
+                                    <li><span class="skill-experience"></span>Cross-platform Game Developement</li>
                                 </ul>
                             </div>
                         </div>
-                        <span class="arrow-down s-roll"></span>
+                        <span class="arrow-down skill-hover"></span>
                     </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">HTML / CSS</div></div>
-                        <div class="tooltip s-roll">
+                    <div class="skill-element hideme dontHide">
+                        <div class="skill-icon"><div class="skill-title">HTML / CSS</div></div>
+                        <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Responsive Frontend Design</li>
-                                    <li><span class="list-dot"></span>Modular Web Elements</li>
-                                    <li><span class="list-dot"></span>Cross-browser + Mobile First Design</li>
+                                    <li><span class="skill-experience"></span>Responsive Frontend Design</li>
+                                    <li><span class="skill-experience"></span>Modular Web Elements</li>
+                                    <li><span class="skill-experience"></span>Cross-browser + Mobile First Design</li>
                                 </ul>
                             </div>
                         </div>
-                        <span class="arrow-down s-roll"></span>
+                        <span class="arrow-down skill-hover"></span>
                     </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">Javascript</div></div>
-                        <div class="tooltip s-roll">
+                    <div class="skill-element hideme dontHide">
+                        <div class="skill-icon"><div class="skill-title">Javascript</div></div>
+                        <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Dynamic Web Elements</li>
-                                    <li><span class="list-dot"></span>Interactive Modules</li>
-                                    <li><span class="list-dot"></span>Backend API Framework</li>
+                                    <li><span class="skill-experience"></span>Dynamic Web Elements</li>
+                                    <li><span class="skill-experience"></span>Interactive Modules</li>
+                                    <li><span class="skill-experience"></span>Backend API Framework</li>
                                 </ul>
                             </div>
                         </div>
-                        <span class="arrow-down s-roll"></span>
+                        <span class="arrow-down skill-hover"></span>
                     </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">PHP</div></div>
-                        <div class="tooltip s-roll">
+                    <div class="skill-element hideme dontHide">
+                        <div class="skill-icon"><div class="skill-title">PHP</div></div>
+                        <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>Backend Library Design</li>
-                                    <li><span class="list-dot"></span>Modular Backend APIs</li>
+                                    <li><span class="skill-experience"></span>Backend Framework Design</li>
+                                    <li><span class="skill-experience"></span>Backend Library Design</li>
+                                    <li><span class="skill-experience"></span>Modular Backend APIs</li>
                                 </ul>
                             </div>
                         </div>
-                        <span class="arrow-down s-roll"></span>
+                        <span class="arrow-down skill-hover"></span>
                     </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">Python</div></div>
-                        <div class="tooltip s-roll">
+                    <div class="skill-element hideme dontHide">
+                        <div class="skill-icon"><div class="skill-title">Python</div></div>
+                        <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>Script Automation</li>
-                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                    <li><span class="skill-experience"></span>Backend Framework Design</li>
+                                    <li><span class="skill-experience"></span>Script Automation</li>
+                                    <li><span class="skill-experience"></span>Web Scraper Tools</li>
                                 </ul>
                             </div>
                         </div>
-                        <span class="arrow-down s-roll"></span>
+                        <span class="arrow-down skill-hover"></span>
                     </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">SQL</div></div>
-                        <div class="tooltip s-roll">
+                    <div class="skill-element hideme dontHide">
+                        <div class="skill-icon"><div class="skill-title">SQL</div></div>
+                        <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Backend Data Storage</li>
-                                    <li><span class="list-dot"></span>Database Script Automation</li>
+                                    <li><span class="skill-experience"></span>Backend Data Storage</li>
+                                    <li><span class="skill-experience"></span>Database Script Automation</li>
                                 </ul>
                             </div>
                         </div>
-                        <span class="arrow-down s-roll"></span>
+                        <span class="arrow-down skill-hover"></span>
                     </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">PowerShell</div></div>
-                        <div class="tooltip s-roll">
+                    <div class="skill-element hideme dontHide">
+                        <div class="skill-icon"><div class="skill-title">PowerShell</div></div>
+                        <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Pipeline Automation</li>
-                                    <li><span class="list-dot"></span>Tool Scripting</li>
+                                    <li><span class="skill-experience"></span>Pipeline Automation</li>
+                                    <li><span class="skill-experience"></span>Tool Scripting</li>
                                 </ul>
                             </div>
                         </div>
-                        <span class="arrow-down s-roll"></span>
+                        <span class="arrow-down skill-hover"></span>
                     </div>
                     <div class="clear"></div>
                </section>
