--- a/new/portfolio-03.html
+++ b/new/portfolio-03.html
@@ -1,6 +1,6 @@
-<div class="img-project">
+<div class="project-container">
     <div class="clear"></div>
-    <div class="info-project">
+    <div class="project-info">
         <div class="tag-project">Embedded Software Developer</div>
         <div class="title-project">Automated Teller Machine</div>
         <div class="spacer"></div>
@@ -18,8 +18,8 @@
     </div>
 </div>
 <div class="clear"></div>
-<div class="w-arrows">
-    <div class="btn-prev"></div>
+<div class="nav-arrows">
+    <div class="prev-button"></div>
     <div class="close"></div>
-    <div class="btn-next"></div>
+    <div class="next-button"></div>
 </div>
