Minor code cleanup.

--- a/new/home.html
+++ b/new/home.html
@@ -260,7 +260,6 @@
             <header class="title one">Work Experience</header>
             <div class="spacer"></div>
             <div class="title two">Check out where I've worked!</div>
-            <!-- TODO: Build work experience section. -->
             <div id="work" class="work-container">
                 <div class="work-exp-left-1 hideme">
                     <div class="work-logo"><img src="img/work/tagged.png"></div>
@@ -335,7 +334,7 @@
                     <div class="clear"></div>
                     <div id="project-show"></div>
                     <section class="project-window">
-                        <div class="project-content"></div><!-- AJAX Dinamic Content -->
+                        <div class="project-content"></div>
                     </section>
                     <section id="portfolio-grid" class="clear">
                         <div class="inici"></div>
@@ -413,17 +412,17 @@
                 <div class="hideme dontHide">
                     <form method="post" id="contact" class="peThemeContactForm" action="mail.php">
                         <div id="personal" class="bay form-horizontal">
-                            <div class="control-group"><!--name field-->
+                            <div class="control-group">
                                 <div class="controls">
                                     <input class="required span9" type="text" name="name" data-fieldid="0" value="Full Name" onclick="if(this.value=='Full Name') this.value=''" onblur="if(this.value=='') this.value='Full Name'">
                                 </div>
                             </div>
-                            <div class="control-group"><!--email field-->
+                            <div class="control-group">
                                 <div class="controls">
                                     <input class="required span9" type="email" name="email" data-fieldid="1" value="Your Email" onclick="if(this.value=='Your Email') this.value=''" onblur="if(this.value=='') this.value='Your Email'">
                                 </div>
                             </div>
-                            <div class="control-group"><!--message field-->
+                            <div class="control-group">
                                 <div class="controls">
                                     <textarea name="message" rows="12" class="required span9" data-fieldid="2" onclick="if(this.value=='Type Message') this.value=''" onblur="if(this.value=='') this.value='Type Message'">Type Message</textarea>
                                 </div>
