--- a/new/home.html
+++ b/new/home.html
@@ -52,10 +52,10 @@
             </div>
         </div>
         <section id="home" class="clear">
-            <div>
+            <div class="no-overflow">
                 <div class="video-mask"></div>
                 <a id="video-volume" onclick="$('#background-video').toggleVolume()"></a>
-                <!-- <div class="bounce"></div> -->
+                <div class="bouncing-arrow"></div>
                 
                 <!-- Video Background -->
                 <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;"></a>
