Make bouncing arrow clickable and actually maintain size properties.

--- a/new/home.html
+++ b/new/home.html
@@ -52,14 +52,12 @@
             </div>
         </div>
         <section id="home" class="clear">
-            <div class="no-overflow">
-                <div class="video-mask"></div>
-                <a id="video-volume" onclick="$('#background-video').toggleVolume()"></a>
-                <div class="bouncing-arrow"></div>
-                
-                <!-- Video Background -->
-                <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;"></a>
-            </div>
+            <div class="video-mask"></div>
+            <a id="video-volume" onclick="$('#background-video').toggleVolume()"></a>
+            <a href="#anchor2"><div class="bouncing-arrow"></div></a>
+            
+            <!-- Video Background -->
+            <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;"></a>
         </section>
         <section id="mobile-background" class="clear"></section>
         <div class="main-title">
