--- a/home.html
+++ b/home.html
@@ -408,7 +408,7 @@
                 <div class="spacer"></div>
                 <div class="title two">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
                 <div class="hideme dontHide">
-                    <form method="post" id="contact" class="peThemeContactForm" action="mailto:bhamodi@uwaterloo.ca">
+                    <form method="get" id="contact" class="peThemeContactForm" action="mailto:bhamodi@uwaterloo.ca" enctype="text/plain">
                         <div id="personal" class="bay form-horizontal">
                             <div class="control-group">
                                 <div class="controls">
@@ -427,7 +427,7 @@
                             </div>
                             <div class="control-group">
                                 <div class="controls send-btn">
-                                    <button type="submit" class="contour-btn red">Send Message</button>
+                                    <button type="submit" name="submit" class="contour-btn red">Send Message</button>
                                 </div>
                             </div>
                         </div>
