Updated stats to github contributions + commenting.

--- a/home.html
+++ b/home.html
@@ -223,9 +223,9 @@
                     </div>
                     <div class="fact-element hideme dontHide">
                         <div class="fact-icon second-stat"></div>
-                        <div class="milestone-counter" data-perc="90">
+                        <div class="milestone-counter" data-perc="201">
                             <span class="milestone-count highlight">0</span>
-                            <div class="milestone-details">Days of GitHub Contributions</div>
+                            <div class="milestone-details">GitHub Contributions</div>
                         </div>
                     </div>
                     <div class="fact-element hideme dontHide">
@@ -237,7 +237,7 @@
                     </div>
                     <div class="fact-element hideme dontHide">
                         <div class="fact-icon fourth-stat"></div>
-                        <div class="milestone-counter" data-perc="1229">
+                        <div class="milestone-counter" data-perc="1223">
                             <span class="milestone-count highlight">0</span>
                             <div class="milestone-details">Days until graduation</div>
                         </div>
