Clean up and fix portfolio javascript.

--- a/home.html
+++ b/home.html
@@ -335,7 +335,7 @@
                         <div class="project-content"></div>
                     </section>
                     <section id="portfolio-grid" class="clear">
-                        <div class="inici"></div>
+                        <div class="portfolioBase"></div>
                         <div class="portfolio-element element tools" id="portfolio-01.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt='img'>
                             <div>
