Make header clickable.

--- a/home.html
+++ b/home.html
@@ -68,12 +68,15 @@
                 </ul>
                 <div class="spacer"></div>
                 <div class="second-title">Creativity starts with viewing the world differently. Take action & keep it simple.</div>
-                <a href="#anchor2"><div class="continue-button
-">Find out more<span></span></div></a>
+                <a href="#anchor2"><div class="continue-button">Find out more<span></span></div></a>
             </div>
         </div>
         <header class="header">
-            <div class="logo"><span><span></span></span>Baraa Hamodi</div>
+            <a href="#home">
+                <div class="logo">
+                    <span><span></span></span>Baraa Hamodi
+                </div>
+            </a>
             <nav id="navbar" role="navigation">
                 <a class="jump-menu" title="Show navigation">Show navigation</a>
                 <ul>
