Fix PHP mailing backend.

--- a/home.html
+++ b/home.html
@@ -412,7 +412,7 @@
                 <div class="spacer"></div>
                 <div class="title two">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
                 <div class="hideme dontHide">
-                    <form method="post" id="contact" class="peThemeContactForm" action="mail.php" enctype="text/plain">
+                    <form method="post" id="contact" class="peThemeContactForm" action="php/mail.php" enctype="text/plain">
                         <div id="personal" class="bay form-horizontal">
                             <div class="control-group">
                                 <div class="controls">
@@ -436,7 +436,7 @@
                             </div>
                         </div>
                         <div class="notifications">
-                            <div id="contactFormSent" class="formSent alert alert-success"><strong>Thank you for contacting us.</strong></div>
+                            <div id="contactFormSent" class="formSent alert alert-success"><strong>Thank you for contacting me.</strong></div>
                             <div id="contactFormError" class="formError alert alert-error"><strong>Oops, An error has ocurred!</strong> See the marked fields above to fix the errors.</div>
                         </div>
                     </form>
