Updated stats + job descriptions.

--- a/home.html
+++ b/home.html
@@ -226,7 +226,7 @@
                     </div>
                     <div class="fact-element hideme dontHide">
                         <div class="fact-icon second-stat"></div>
-                        <div class="milestone-counter" data-perc="208">
+                        <div class="milestone-counter" data-perc="230">
                             <span class="milestone-count highlight">0</span>
                             <div class="milestone-details">GitHub Contributions</div>
                         </div>
@@ -241,7 +241,7 @@
                     </div>
                     <div class="fact-element hideme dontHide">
                         <div class="fact-icon fourth-stat"></div>
-                        <div class="milestone-counter" data-perc="1208">
+                        <div class="milestone-counter" data-perc="1204">
                             <span class="milestone-count highlight">0</span>
                             <div class="milestone-details">Days until graduation</div>
                         </div>
@@ -272,8 +272,9 @@
                         <ul>
                             <li>Shipped production level code to over 2.5 million daily active users.</li>
                             <li>Implemented a mobile API which helps deliver mobile specific content to users via mobile device detection.</li>
-                            <li>Worked on recreating the entire messaging backend using technologies such as Hadoop, Kafka, Avro and XMPP.</li>
-                            <li>Optimized the website to have a 10% better load time by re-factoring and removing redundancies in the codebase.</li>
+                            <li>Increased user engagement by 4% by releasing fully responsive user-facing features and optimizations.</li>
+                            <li>Worked with team to recreate the messaging backend to use technologies such as Hadoop, Kafka, Avro and XMPP.</li>
+                            <li>Optimized the website to have a 12% faster load time by re-factoring and removing redundancies in the codebase.</li>
                         </ul>
                     </div>
                 </div>
@@ -284,7 +285,7 @@
                     <div class="work-location">Ottawa, Ontario</div>
                     <div class="work-description">
                         <ul>
-                            <li>Shipped a Java tool that determines more system info than Microsoft’s sysinfo command and produces a CSV file of its findings. This tool is being used internally and saves approximately $1,000 annually per employee.</li>
+                            <li>Shipped a Java tool that determines more system information than Microsoft’s “sysinfo” command and produces a CSV file of its findings. This tool is being used internally and saves approximately $1,000 annually per employee.</li>
                             <li>Automated the environment backup/restoration pipeline process using PowerShell and SQL.</li>
                             <li>Developed web automation using Selenium that collects data from web pages for data verification purposes.</li>
                             <li>Updated and maintained various large-scale scripts and automated test cases.</li>
