Updated Balance Tracker project icon.

--- a/home.html
+++ b/home.html
@@ -377,7 +377,7 @@
                         </div>
 
                         <div class="portfolio-element element tools backend" id="portfolio-06.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-06.png" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Balance Tracker<span class="project-position">Tool Developer</span></span>
                             </div>
