--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
             <a href="#anchor2"><div class="bouncing-arrow"></div></a>
 
             <!-- Video Background -->
-            <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;"></a>
+            <a id="background-video" class="player" data-property="{videoURL:'kn-1D5z3-Cs',mute:true,showControls:false,showYTLogo:false,realfullscreen:false,gaTrack:false}"></a>
         </section>
         <section id="mobile-background" class="clear"></section>
         <div class="main-title">
@@ -463,7 +463,7 @@
         <script src="js/home/jquery.hoverdir.min.js"></script>
         <script src="js/home/jquery.nav.js"></script>
         <script src="js/home/jquery.isotope.min.js"></script>
-        <script src="js/home/jquery.mb.YTPlayer.js"></script>
+        <script src="js/home/jquery.mb.YTPlayer.min.js"></script>
         <script src="js/home/jquery.validate.min.js"></script>
         <script src="js/home/jquery.form.min.js"></script>
     </body>
