--- a/home.html
+++ b/home.html
@@ -443,8 +443,8 @@
                     <ul class="icons">
                         <li><a class="github" target="_blank" href="https://github.com/bhamodi"></a></li>
                         <li><a class="stackoverflow" target="_blank" href="http://stackoverflow.com/users/3474514/baraa-h"></a></li>
+                        <li><a class="hackerrank" target="_blank" href="https://www.hackerrank.com/bhamodi"></a></li>
                         <li><a class="codecademy" target="_blank" href="http://www.codecademy.com/bhamodi"></a></li>
-                        <li><a class="khanacademy" target="_blank" href="https://www.khanacademy.org/profile/BaraaHamodi"></a></li>
                         <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/baraahamodi"></a></li>
                     </ul>
                     <div class="copy-right">2015 © Baraa Hamodi | All rights reserved.</div>
