--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
         <!-- Open Graph Meta Data -->
         <meta property="og:description" content="A young man with big dreams.">
-        <meta property="og:image" content="http://baraa.ca/img/thumbnail.jpg">
+        <meta property="og:image" content="http://baraa.ca/img/thumbnail.png">
         <meta property="og:site_name" content="Baraa Hamodi">
         <meta property="og:title" content="Baraa Hamodi">
         <meta property="og:type" content="website">
