--- a/home.html
+++ b/home.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Baraa Hamodi - Mechatronics Engineer</title>
@@ -40,9 +37,6 @@
     </head>
 
     <body>
-        <!--[if lte IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
         <div class="preloader">
             <div class="loading">
                 <h3>Loading...</h3>
@@ -454,7 +448,6 @@
         <a href="#home" class="scrollup">^</a>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="js/home/modernizr-2.6.2.min.js"></script>
         <script src="js/home/main.js"></script>
         <script src="js/home/jquery.inview.min.js"></script>
         <script src="js/home/jquery.sticky.js"></script>
