Renamed index and home page CSS files.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/loader.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
 
     <!--[if lt IE 9]>
         <link rel="stylesheet" href="css/ie.css" />
