--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 
         <link rel="stylesheet" href="css/loader.css"/>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/default.css">
+        <link rel="stylesheet" href="css/home.css">
     </head>
 
     <body>
