--- a/home.html
+++ b/home.html
@@ -11,15 +11,14 @@
         <!-- Core Meta Data -->
         <meta name="author" content="Baraa Hamodi">
         <meta name="description" content="A young man with big dreams.">
-        <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,jquery,design,java,c++,robotics">
+        <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,jquery,python,design,java,c++,robotics">
 
         <!-- Open Graph Meta Data -->
-        <meta property="og:description" content="A young man with big dreams.">
-        <meta property="og:image" content="http://baraa.ca/img/thumbnail.png">
-        <meta property="og:site_name" content="Baraa Hamodi">
-        <meta property="og:title" content="Baraa Hamodi">
+        <meta property="og:title" content="Baraa Hamodi - Mechatronics Engineer">
         <meta property="og:type" content="website">
+        <meta property="og:image" content="http://baraa.ca/img/thumbnail.png">
         <meta property="og:url" content="http://baraa.ca">
+        <meta property="og:description" content="A young man with big dreams.">
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="icon.png">
