--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
 <head>
     <meta charset="utf-8">
-
     <title>Baraa Hamodi - Mechatronics Engineer</title>
 
     <!-- Behavioral Meta Data -->
@@ -13,15 +12,14 @@
     <!-- Core Meta Data -->
     <meta name="author" content="Baraa Hamodi">
     <meta name="description" content="A young man with big dreams.">
-    <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,jquery,design,java,c++,robotics">
+    <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,jquery,python,design,java,c++,robotics">
 
     <!-- Open Graph Meta Data -->
-    <meta property="og:description" content="A young man with big dreams.">
-    <meta property="og:image" content="http://baraa.ca/img/thumbnail.png">
-    <meta property="og:site_name" content="Baraa Hamodi">
-    <meta property="og:title" content="Baraa Hamodi">
+    <meta property="og:title" content="Baraa Hamodi - Mechatronics Engineer">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="http://baraa.ca/img/thumbnail.png">
     <meta property="og:url" content="http://baraa.ca">
+    <meta property="og:description" content="A young man with big dreams.">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="icon.png">
